k3s/cloudless-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudless
  labels:
    project: cloudless
    environment: production
