k3s/cloudless-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudless-app
  namespace: cloudless
  labels:
    app.kubernetes.io/name: cloudless-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudless-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
